--- a/index.html
+++ b/index.html
@@ -311,5 +311,39 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script src="js/main.js"></script>
+  <script>
+document.getElementById("bmiForm").addEventListener("submit", function(e) {
+  e.preventDefault(); // stop form reload
+
+  // get values
+  const weight = parseFloat(document.getElementById("bmiWeight").value);
+  const heightCm = parseFloat(document.getElementById("bmiHeight").value);
+  const resultDiv = document.getElementById("bmiResult");
+
+  if (!weight || !heightCm) {
+    resultDiv.innerHTML = "<div class='text-danger'>Please enter valid weight and height.</div>";
+    return;
+  }
+
+  // calculate BMI
+  const heightM = heightCm / 100;
+  const bmi = weight / (heightM * heightM);
+  let category = "";
+
+  if (bmi < 18.5) category = "Underweight";
+  else if (bmi < 24.9) category = "Normal weight";
+  else if (bmi < 29.9) category = "Overweight";
+  else category = "Obese";
+
+  // display result
+  resultDiv.innerHTML = `
+    <div class="alert alert-info">
+      <strong>Your BMI:</strong> ${bmi.toFixed(2)}<br>
+      <strong>Category:</strong> ${category}
+    </div>
+  `;
+});
+</script>
+
 </body>
 </html>
